[package]
name = "example_http3"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cmake = "0.1"
pkg-config = { version = "0.3", optional = true }
cdylib-link-lines = { version = "0.1", optional = true }

[dependencies]
boring = { version = "4.17.0", optional = true }
foreign-types-shared = { version = "0.3.0", optional = true }
log = { version = "0.4.27" }
quiche = "0.24.5"
either = { version = "1.8", default-features = false }
intrusive-collections = "0.9.5"
libm = "0.2.15"
sfv = { version = "0.13.0", optional = true }
slab = "0.4.10"
octets = "0.3.0"
libc = "0.2.174"
qlog = { version = "0.15.2", optional = true }
mio = { version = "1.0.4", features = ["net", "os-poll"] }
ring = "0.17.14"
url = "2.5.4"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
